# easy-email-downloader

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE.md  README.md  cliff.toml  duties.py  playground.py  prospector.yaml  pyproject.toml  requirements.txt  setup.py  todo.todo
easy_email_downloader/: __init__.py  __version__.py  _version.py  common.py  exceptions.py  models.py  utils.py
